# guru

./: CHANGELOG.md  LICENSE  guru.cabal
exec/: Main.hs
src/: Gui.hs  Guru.hs  Types.hs
src/Gdb/: Messages.hs  Parser.hs  Process.hs  Syntax.hs
src/Guru/: Gdb.hs  Gui.hs  Types.hs  Utils.hs
src/Guru/Gui/: Backtrace.hs  Expressions.hs  Gdb.hs  Threads.hs  Threads2.hs
src/Widgets/: Backtrace.hs  Gdb.hs  Threads.hs
tests/: Main.hs
