cabal-version:       2.4
name:                guru
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omer@well-typed.com
-- copyright:
category:            Development
extra-source-files:  CHANGELOG.md

executable guru
  main-is:             Main.hs
  -- other-modules:

  other-extensions:
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables

  build-depends:
      attoparsec,
      base ^>=4.12.0.0,
      bytestring,
      gi-gtk,
      text,

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -O2
