cabal-version:       2.4
name:                guru
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omer@well-typed.com
-- copyright:
category:            Development
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src

  build-depends:
    attoparsec,
    base ^>=4.12.0.0,
    bytestring,
    containers,
    gi-gtk,
    lens,
    text,

  default-extensions:
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables

  exposed-modules:
    Gdb.Parser
    Gdb.Syntax

  default-language: Haskell2010
  ghc-options: -Wall -O2

executable guru
  main-is: Main.hs
  build-depends: base, guru
  hs-source-dirs: exec
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -O2

test-suite unit-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
    attoparsec,
    base,
    bytestring,
    containers,
    guru,
    tasty,
    tasty-hunit,
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall -threaded -rtsopts
