cabal-version:       2.4
name:                guru
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omer@well-typed.com
-- copyright:
category:            Development
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Gdb.Messages
    Gdb.Parser
    Gdb.Syntax
    Guru
    Guru.Types

  other-modules:
    Guru.Gdb
    Guru.Gui
    Guru.Gui.Backtrace
    Guru.Gui.Expressions
    Guru.Gui.Gdb
    Guru.Gui.Threads
    Guru.Gui.Threads2
    Guru.Utils

  hs-source-dirs: src

  build-depends:
    attoparsec,
    base ^>=4.12.0.0,
    bytestring,
    containers,
    gi-gdk,
    gi-gio,
    gi-glib,
    gi-gtk,
    haskell-gi-base,
    lens,
    text,
    typed-process,

  default-extensions:
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables

  default-language: Haskell2010
  ghc-options: -Wall -O2

executable guru
  main-is: Main.hs
  build-depends: base, guru
  hs-source-dirs: exec
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -O2

test-suite unit-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
    attoparsec,
    base,
    bytestring,
    containers,
    guru,
    tasty,
    tasty-hunit,
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall -threaded -rtsopts
